--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
 	"scripts": {
 		"build": "tsc",
 		"start": "node build/index.js",
-		"dev": "concurrently \"tsc -w\" \"nodemon build/index.js\""
+		"dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
+		"deploy:commands": "tsc && node build/scripts/deploy-commands.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/node": "^17.0.23",
 		"concurrently": "^7.1.0",
 		"nodemon": "^2.0.15",
 		"typescript": "^4.6.3"
 	},
 	"dependencies": {
+		"@discordjs/rest": "^0.3.0",
 		"discord.js": "^13.6.0",
 		"dotenv": "^16.0.0"
 	}
