--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"build": "tsc",
 		"start": "node build/index.js",
 		"dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
-		"deploy:commands": "tsc && node build/scripts/deploy-commands.js"
+		"deploy:commands": "tsc && node build/scripts/deploy-commands.js",
+		"prisma:studio": "prisma studio",
+		"prisma:gen": "prisma generate"
 	},
 	"keywords": [],
 	"author": "",
@@ -16,10 +18,12 @@
 		"@types/node": "^17.0.23",
 		"concurrently": "^7.1.0",
 		"nodemon": "^2.0.15",
+		"prisma": "^3.12.0",
 		"typescript": "^4.6.3"
 	},
 	"dependencies": {
 		"@discordjs/rest": "^0.3.0",
+		"@prisma/client": "^3.12.0",
 		"discord.js": "^13.6.0",
 		"dotenv": "^16.0.0"
 	}
