--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "tsc",
+		"check-types": "tsc --noEmit",
 		"start": "node build/index.js",
 		"dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
-		"deploy:commands": "tsc && node build/scripts/deploy-guildCommands.js",
-		"deploy:gCommands": "tsc && node build/scripts/deploy-globalCommands.js",
+		"deploy:commands": "tsc && node build/scripts/deploy-commands.js",
 		"prisma:studio": "prisma studio",
 		"prisma:gen": "prisma generate"
 	},
