--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/node": "^17.0.23",
+		"@typescript-eslint/eslint-plugin": "^5.19.0",
+		"@typescript-eslint/parser": "^5.19.0",
 		"concurrently": "^7.1.0",
+		"eslint": "^8.13.0",
 		"nodemon": "^2.0.15",
 		"prisma": "^3.12.0",
 		"typescript": "^4.6.3"
