--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 		{
 			"label": "Typecheck entire folder",
 			"type": "npm",
-			"script": "check-types",
+			"script": "typecheck",
 			"problemMatcher": ["$tsc"]
 		},
 		{
