--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "tsc",
-		"check-types": "tsc --noEmit",
+		"typecheck": "tsc --noEmit",
 		"start": "node build/index.js",
 		"dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
 		"deploy:commands": "tsc && node build/scripts/deploy-commands.js",
