--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
 	"root": true,
 	"parser": "@typescript-eslint/parser",
 	"plugins": ["@typescript-eslint"],
-	"ignorePatterns": ["node_modules/", "build/"],
+	"ignorePatterns": ["node_modules/", "dist/"],
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
@@ -19,6 +19,7 @@
 		"semi": "off",
 		"@typescript-eslint/semi": ["error", "always"],
 
+		"no-mixed-spaces-and-tabs": "off",
 		"@typescript-eslint/ban-ts-comment": "off",
 		"@typescript-eslint/no-var-requires": "off"
 	}
