--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
 	"name": "mabra",
-	"version": "1.0.0",
+	"version": "2.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "dist/index.js",
 	"scripts": {
-		"build": "tsc",
-		"typecheck": "tsc --noEmit",
 		"start": "node build/index.js",
 		"dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
 		"deploy:commands": "tsc && node build/scripts/deploy-commands.js",
-		"prisma:studio": "prisma studio",
-		"prisma:gen": "prisma generate"
+		"build": "tsc",
+		"typecheck": "tsc --noEmit",
+		"watch": "tsc -w"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "Zdrapka",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/glob": "^7.2.0",
 		"@types/node": "^17.0.23",
 		"@typescript-eslint/eslint-plugin": "^5.19.0",
 		"@typescript-eslint/parser": "^5.19.0",
-		"concurrently": "^7.1.0",
 		"eslint": "^8.13.0",
-		"nodemon": "^2.0.15",
 		"prisma": "^3.12.0",
 		"typescript": "^4.6.3"
 	},
 	"dependencies": {
 		"@discordjs/rest": "^0.3.0",
 		"@prisma/client": "^3.12.0",
+		"chalk": "4.1.2",
+		"concurrently": "^7.1.0",
 		"discord.js": "^13.6.0",
-		"dotenv": "^16.0.0"
+		"dotenv": "^16.0.0",
+		"glob": "^8.0.1",
+		"nodemon": "^2.0.15"
 	}
 }
